[gd_scene load_steps=5 format=3 uid="uid://cvkideptcxtuk"]

[ext_resource type="Texture2D" uid="uid://25gh2odtifhv" path="res://scenes/home/ui/stats/heart.png" id="2"]
[ext_resource type="Resource" uid="uid://cmpo574c33e4r" path="res://config/menu.tres" id="3_dibi5"]
[ext_resource type="Texture2D" uid="uid://b2l8td6ax26uf" path="res://scenes/home/ui/stats/fun.png" id="4"]
[ext_resource type="Script" uid="uid://cxl15g5432h25" path="res://scenes/home/ui/stats/StatusPanel.gd" id="5"]

[node name="PanelContainer" type="TabContainer"]
offset_right = 97.0
offset_bottom = 115.0
current_tab = 0
clip_tabs = false
tabs_visible = false
script = ExtResource("5")
menu = ExtResource("3_dibi5")

[node name="BasicDisplay" type="GridContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 1
columns = 2
metadata/_tab_index = 0

[node name="Label" type="Label" parent="BasicDisplay"]
layout_mode = 2
theme_type_variation = &"NumericLabel"
text = "Food"

[node name="PanelContainer" type="PanelContainer" parent="BasicDisplay"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="LifeMeter" type="TextureProgressBar" parent="BasicDisplay/PanelContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
max_value = 5.0
value = 5.0
allow_greater = true
texture_progress = ExtResource("2")

[node name="Label2" type="Label" parent="BasicDisplay"]
layout_mode = 2
theme_type_variation = &"NumericLabel"
text = "Mood"

[node name="PanelContainer2" type="PanelContainer" parent="BasicDisplay"]
custom_minimum_size = Vector2(0, 16)
layout_mode = 2

[node name="HappyMeter" type="TextureProgressBar" parent="BasicDisplay/PanelContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
max_value = 5.0
value = 3.0
allow_greater = true
texture_progress = ExtResource("4")

[node name="Label3" type="Label" parent="BasicDisplay"]
layout_mode = 2
theme_type_variation = &"NumericLabel"
text = "Weight"

[node name="Weight" type="Label" parent="BasicDisplay"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"PaddedLabel"
text = "15.6 lbs"

[node name="Label4" type="Label" parent="BasicDisplay"]
layout_mode = 2
theme_type_variation = &"NumericLabel"
text = "Age"

[node name="Age" type="Label" parent="BasicDisplay"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"PaddedLabel"
text = "00d 02h 02m"

[node name="Label5" type="Label" parent="BasicDisplay"]
layout_mode = 2
theme_type_variation = &"NumericLabel"
text = "Status"

[node name="Mood" type="Label" parent="BasicDisplay"]
unique_name_in_owner = true
layout_mode = 2
theme_type_variation = &"PaddedLabel"
text = "Stinky"

[node name="DetailedDisplay" type="GridContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 1
columns = 2
metadata/_tab_index = 1

[node name="Label" type="Label" parent="DetailedDisplay"]
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"NumericLabel"
text = "Hunger"

[node name="HungryValue" type="Label" parent="DetailedDisplay"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"PaddedLabel"
text = "0.0"
horizontal_alignment = 2

[node name="Label2" type="Label" parent="DetailedDisplay"]
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
theme_type_variation = &"NumericLabel"
text = "Boredom"

[node name="BoredomValue" type="Label" parent="DetailedDisplay"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"PaddedLabel"
text = "0.0"
horizontal_alignment = 2

[node name="Label3" type="Label" parent="DetailedDisplay"]
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
theme_type_variation = &"NumericLabel"
text = "Tired"

[node name="TirednessValue" type="Label" parent="DetailedDisplay"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"PaddedLabel"
text = "0.0"
horizontal_alignment = 2

[node name="Label4" type="Label" parent="DetailedDisplay"]
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
theme_type_variation = &"NumericLabel"
text = "Dirty"

[node name="DirtyValue" type="Label" parent="DetailedDisplay"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"PaddedLabel"
text = "0.0"
horizontal_alignment = 2

[node name="Label5" type="Label" parent="DetailedDisplay"]
modulate = Color(0.0588235, 0.0352941, 0.0352941, 1)
layout_mode = 2
theme_type_variation = &"NumericLabel"
text = "Sick"

[node name="SickValue" type="Label" parent="DetailedDisplay"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"PaddedLabel"
text = "0.0"
horizontal_alignment = 2

[node name="CounterDisplay" type="GridContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2
theme_override_constants/h_separation = 8
theme_override_constants/v_separation = 1
columns = 2
metadata/_tab_index = 2
